# dataset-decorator

./: .gitignore  CHANGELOG.md  README.md  deploy.sh  lamda-setup.sh  pyproject.toml  requirements.txt  risk_decorator.py
dataset_risk_decorator/: __init__.py  core.py
examples/: alpaca_cleaned_example.py  cybernative_dpo_example.py  devign_example.py
training/: readme.md  train_deberta_devign.py  train_deberta_multisource.py
